Bug 119194 - Deprecation warning mentions wrong command line parameter when -convert-to used
Summary: Deprecation warning mentions wrong command line parameter when -convert-to used
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-10 08:57 UTC by Mike Kaganski
Modified: 2018-08-14 12:06 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2018-08-10 08:57:27 UTC
> soffice -convert-to docx file

gives this warning:

> Warning: docx is deprecated.  Use -docx instead.

Actually, this should have been warning about -convert-to ("Use --convert-to instead").

Tested with Version: 6.1.0.3 (x64)
Build ID: efb621ed25068d70781dc026f7e9c5187a4decd1
CPU threads: 12; OS: Windows 10.0; UI render: GL; 
Locale: ru-RU (ru_RU); Calc: CL.
Comment 1 Mike Kaganski 2018-08-10 09:01:13 UTC
https://gerrit.libreoffice.org/58815
Comment 2 Commit Notification 2018-08-10 10:02:12 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5ccf82642b19728e1cfe8fa11f654e90712c5757

tdf#119194: save deprecated argument early

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2018-08-14 12:06:35 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0bf6e4fdfdb109dcfd75ddd9ced0c04b2ac987a9&h=libreoffice-6-1

tdf#119194: save deprecated argument early

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.