tdf#119194: save deprecated argument early

Change-Id: I4b5001e1f71ac536ac0c3bda4b8c1955020ab40d